refactor: use Java 11 "String::isBlank()"
Signed-off-by: Mozi <29089388+pzhlkj6612@users.noreply.github.com>